--- a/style.css
+++ b/style.css
@@ -9,7 +9,15 @@ p {
     color: green;
 }
 
-div {
-    background-color: #770000;
-    color: #CCCCCC;
+.flex-container {
+    display: flex;
+    background-color: darkblue;
+    flex-direction: row;
+}
+
+.flex-container>div {
+    background-color: #f1f1f1;
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
 }
